<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:elevation="4dp"
    app:cardCornerRadius="12dp"
    app:cardBackgroundColor="@color/greenBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Stock Name -->
        <TextView
            android:id="@+id/stock_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_market"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium" />

        <!-- Stock Value -->
        <TextView
            android:id="@+id/stock_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_value"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginTop="8dp"/>

        <!-- Stock Change -->
        <TextView
            android:id="@+id/stock_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stock_change"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>