<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="16dp"
    android:radius="8dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    tools:context=".NewsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@color/greenBackground">

        <!-- Image representing the news -->
        <ImageView
            android:id="@+id/news_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_people_alt_24"
            android:contentDescription="News Image"
            android:scaleType="centerCrop" />

        <!-- Linear Layout to hold text information -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <!-- News Title -->
            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_news"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@android:color/white" />

            <!-- News Description -->
            <TextView
                android:id="@+id/news_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_news"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginTop="8dp" />

            <!-- News Published -->
            <TextView
                android:id="@+id/news_published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_news"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"/>

            <!-- News Link (optional for user interaction) -->
            <TextView
                android:id="@+id/news_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_more"
                android:textSize="14sp"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>