<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:radius="30dp"
    tools:context=".News.NewsFragment">

    <LinearLayout
        android:id="@+id/news_layout"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:layout_margin="5dp">

        <!-- Image representing the news -->
        <ImageView
            android:id="@+id/news_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:src="@drawable/news"
            android:contentDescription="News Image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <!-- News Title -->
            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_news"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"
                android:textColor="@color/green" />

            <!-- News Description -->
            <TextView
                android:id="@+id/news_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_news"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginTop="8dp" />

            <!-- News Published -->
            <TextView
                android:id="@+id/news_published"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_news"
                android:textSize="12sp"
                android:textColor="@color/green"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>